--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "server": "nodemon"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
